--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "moment": "^2.29.1",
     "mongodb": "^3.6.9",
     "multer": "^1.4.2",
-    "vmsg": "^0.4.0",
-    "xmlhttprequest": "^1.8.0"
+    "vmsg": "^0.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
