--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
+    "express-rate-limit": "^5.2.6",
     "fs-extra": "^10.0.0",
     "mongodb": "^3.6.9",
     "multer": "^1.4.2",
