--- a/package.json
+++ b/package.json
@@ -19,11 +19,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
-  },
-  "engines": {
-    "node": "16.2.0",
-    "npm": "7.13.0"
+    "dev": "nodemon index"
   },
   "author": "Kenneth Salanga",
   "license": "ISC"
